--- a/car-rental/index.html
+++ b/car-rental/index.html
@@ -34,11 +34,13 @@
           <div
             class="lg:flex justify-center items-center gap-10 hidden text-sm"
           >
-            <button class="border-2 px-5 py-2 rounded-lg btnHover border-white">
+            <button
+              class="border-2 px-5 py-2 rounded-lg btnHover hover:border-black"
+            >
               Sign Up
             </button>
             <button
-              class="btnColor px-5 py-2 rounded-lg text-white btnNonHover border-2 border-white"
+              class="btnColor px-5 py-2 rounded-lg text-white btnNonHover border-2 hover:border-black"
             >
               Sign In
             </button>
@@ -342,7 +344,177 @@
       </div>
     </section>
 
-    <!--  -->
+    <!-- Links -->
+    <scetion id="links">
+      <div class="container grid lg:grid-cols-4 mt-28 pb-10 border-b-2 mb-8">
+        <div>
+          <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
+          <ul class="flex flex-col gap-2">
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Career
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Hotels
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Cars
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Packages
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Features
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Priceline
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
+          <ul class="flex flex-col gap-2">
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Career
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Hotels
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Cars
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Packages
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Features
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Priceline
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
+          <ul class="flex flex-col gap-2">
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Career
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Hotels
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Cars
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Packages
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Features
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Priceline
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
+          <ul class="flex flex-col gap-2">
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Career
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Hotels
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Cars
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Packages
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Features
+            </li>
+            <li
+              class="cursor-pointer hover:text-orange-600 font-semibold text-slate-700"
+            >
+              Priceline
+            </li>
+          </ul>
+        </div>
+      </div>
+    </scetion>
+
+    <!-- footer -->
+    <footer>
+      <div
+        class="container flex flex-col lg:flex-row justify-between items-center mb-6"
+      >
+        <h1 class="text-2xl font-bold">RentalX</h1>
+        <p class="text-slate-600">
+          Copyright &copy; 2024 Web Design Mastery. All rights reserved.
+        </p>
+        <div class="flex justify-center items-center gap-4">
+          <i
+            class="ri-facebook-fill border rounded-full px-1 shadow-md hover:bg-orange-600 hover:text-white cursor-pointer text-xl transition ease"
+          ></i>
+          <i
+            class="ri-twitter-fill border rounded-full px-1 shadow-md hover:bg-orange-600 hover:text-white cursor-pointer text-xl transition ease"
+          ></i>
+          <i
+            class="ri-google-fill border rounded-full px-1 shadow-md hover:bg-orange-600 hover:text-white cursor-pointer text-xl transition ease"
+          ></i>
+        </div>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
