--- a/car-rental/index.html
+++ b/car-rental/index.html
@@ -14,41 +14,24 @@
     <title>RentalX</title>
   </head>
   <body class="bg-slate-50">
-    <header>
-      <nav class="w-full bg-slate-100">
-        <div class="h-16 flex justify-between items-center container">
-          <h1 class="text-2xl font-bold tracking-wider">RentalX</h1>
+    <header id="navbar" class="bg-bodyColor fixed top-0 w-full left-0 z-50">
+      <nav class="container flex justify-between items-center h-16 sm:h-20">
+        <div class="text-2xl">RentalX</div>
+        <div
+          id="nav-menu"
+          class="bg-orange-600 absolute top-0 left-[-100%] min-h-[80vh] w-full flex justify-center duration-300 items-center md:static md:min-h-fit md:w-auto md:bg-transparent"
+        >
+          <ul class="flex md:flex-row flex-col items-center gap-8">
+            <li><a href="#hero" class="nav-link active">Home</a></li>
+            <li><a href="#rent" class="nav-link">Rent</a></li>
+            <li><a href="#services" class="nav-link">Services</a></li>
+            <li><a href="#ride" class="nav-link">Ride</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+          </ul>
+        </div>
 
-          <div>
-            <ul
-              class="lg:flex justify-center items-center space-x-12 w-auto px-10 ml-28 hidden font-semibold text-lg"
-            >
-              <li><a href="#" class="nav-link">Home</a></li>
-              <li><a href="#rent" class="nav-link">Rent</a></li>
-              <li><a href="#services" class="nav-link">Services</a></li>
-              <li><a href="#ride" class="nav-link">Ride</a></li>
-              <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-          </div>
-
-          <div
-            class="lg:flex justify-center items-center gap-10 hidden text-sm"
-          >
-            <button
-              class="border-2 px-5 py-2 rounded-lg btnHover hover:border-black"
-            >
-              Sign Up
-            </button>
-            <button
-              class="btnColor px-5 py-2 rounded-lg text-white btnNonHover border-2 hover:border-black"
-            >
-              Sign In
-            </button>
-          </div>
-
-          <div id="menu" class="md:hidden">
-            <i class="ri-menu-line"></i>
-          </div>
+        <div class="text-xl sm:text-3xl cursor-pointer z-50 md:hidden">
+          <i class="ri-menu-2-line" id="hamburger"></i>
         </div>
       </nav>
     </header>
@@ -61,7 +44,9 @@
       <div
         class="container p-0 flex flex-col lg:flex-row justify-center items-center gap-24"
       >
-        <div class="flex flex-col gap-4 lg:w-1/2 w-full lg:p-10">
+        <div
+          class="popular__card-1 flex flex-col gap-4 lg:w-1/2 w-full lg:p-10"
+        >
           <div>
             <h1 class="text-2xl lg:text-5xl leading-tight font-bold">
               Looking to save more on your rental car?
@@ -87,7 +72,7 @@
           </div>
         </div>
 
-        <div class="lg:w-1/2 w-full relative z-10">
+        <div class="popular__card-2 lg:w-1/2 w-full relative z-10">
           <div
             class="bg-gradient-to-b from-orange-700 to-orange-500 w-2/3 h-[55vh] md:h-[70vh] absolute top-[-15%] left-[15%] -z-10 rounded-lg"
           ></div>
@@ -99,7 +84,7 @@
     <!-- how it works -->
     <section id="work">
       <div class="container my-20">
-        <div class="lg:w-1/2 mx-auto text-center">
+        <div class="hero__big-text lg:w-1/2 mx-auto text-center">
           <h2 class="text-xl">HOW IT WORKS</h2>
           <h1 class="text-4xl font-bold">Rentgo following 3 working steps</h1>
         </div>
@@ -109,7 +94,7 @@
         >
           <!-- card 1 -->
           <div
-            class="flex flex-col justify-center items-center p-8 text-center lg:w-2/3 w-full lg:w-auto group gap-3"
+            class="collection__card flex flex-col justify-center items-center p-8 text-center w-full lg:w-auto group gap-3"
           >
             <i
               class="ri-map-pin-fill group-hover:text-white border-4 border-white bg-slate-100 text-2xl group-hover:bg-orange-500 py-3 px-4 rounded-lg"
@@ -123,7 +108,7 @@
 
           <!-- card 2 -->
           <div
-            class="flex flex-col justify-center items-center p-8 text-center lg:w-2/3 w-full group gap-3"
+            class="collection__card flex flex-col justify-center items-center p-8 text-center lg:w-auto w-full group gap-3"
           >
             <i
               class="ri-calendar-check-fill border-4 border-white bg-slate-100 group-hover:text-white text-2xl group-hover:bg-orange-500 py-3 px-4 rounded-lg"
@@ -137,7 +122,7 @@
 
           <!-- card 3 -->
           <div
-            class="flex flex-col justify-center items-center p-8 text-center lg:w-2/3 w-full lg:w-auto group gap-3"
+            class="collection__card flex flex-col justify-center items-center p-8 text-center w-full lg:w-auto group gap-3"
           >
             <i
               class="ri-bookmark-3-fill bg-slate-100 border-4 border-white group-hover:text-white group-hover:bg-orange-500 text-2xl py-3 px-4 rounded-lg"
@@ -157,12 +142,12 @@
       <div
         class="container lg:p-10 flex flex-col lg:flex-row justify-center items-center gap-10"
       >
-        <div class="lg:w-1/2 w-full">
+        <div class="popular__card-1 lg:w-1/2 w-full">
           <img src="./assets/service.png" alt="service" />
         </div>
 
         <div
-          class="lg:w-1/2 w-full px-16 flex flex-col justify-center items-start gap-4"
+          class="popular__card-2 lg:w-1/2 w-full px-16 flex flex-col justify-center items-start gap-4"
         >
           <h2 class="text-slate-600 text-lg">BEST SERVICES</h2>
           <h1 class="text-4xl font-bold">
@@ -226,7 +211,7 @@
     <!-- experience -->
     <section id="experience" class="my-20">
       <div class="container flex flex-col justify-center items-center gap-20">
-        <div>
+        <div class="popular__top">
           <h2 class="text-center text-lg text-slate-600 mb-4">
             CUSTOMER EXPERIENCE
           </h2>
@@ -235,7 +220,7 @@
           </h1>
         </div>
 
-        <div class="relative lg:w-[70vw] max-h-screen">
+        <div class="hero__content relative lg:w-[70vw] max-h-screen">
           <img
             src="./assets/experience.png"
             class="mx-auto max-h-screen opacity-30 lg:opacity-100"
@@ -304,7 +289,7 @@
     <!-- download -->
     <section id="download">
       <div
-        class="h-[100vh] w-full flex justify-center items-center relative my-16"
+        class="hero__content h-[100vh] w-full flex justify-center items-center relative my-16"
       >
         <div
           class="container bg-gradient-to-b from-orange-600 to-orange-400 -z-10 rounded-lg h-[50vh] flex flex-col lg:flex-row justify-center items-center"
@@ -347,7 +332,7 @@
     <!-- Links -->
     <scetion id="links">
       <div class="container grid lg:grid-cols-4 mt-28 pb-10 border-b-2 mb-8">
-        <div>
+        <div class="collection__card">
           <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
           <ul class="flex flex-col gap-2">
             <li
@@ -383,7 +368,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="collection__card">
           <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
           <ul class="flex flex-col gap-2">
             <li
@@ -419,7 +404,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="collection__card">
           <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
           <ul class="flex flex-col gap-2">
             <li
@@ -455,7 +440,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="collection__card">
           <h2 class="text-2xl font-semibold mb-4">Our Products</h2>
           <ul class="flex flex-col gap-2">
             <li
@@ -494,7 +479,7 @@
     </scetion>
 
     <!-- footer -->
-    <footer>
+    <footer class="hero__content">
       <div
         class="container flex flex-col lg:flex-row justify-between items-center mb-6"
       >
@@ -515,6 +500,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="./scrollreveal.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
