--- a/construction-web/index.html
+++ b/construction-web/index.html
@@ -7,7 +7,7 @@
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/images/favicon.png"
       type="image/x-icon"
     />
 
@@ -69,7 +69,71 @@
     <!--==================== MAIN ====================-->
     <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home section" id="home"></section>
+      <section class="home section" id="home">
+        <img
+          src="./assets/images/home-lines-bg.svg"
+          alt="home1"
+          class="home_lines"
+        />
+
+        <div class="home_container container grid">
+          <div class="home_content grid">
+            <div class="home_data">
+              <h1 class="home_title">
+                Create The <br />
+                Constructions <br />
+                You Want Here
+              </h1>
+
+              <p class="home_description">
+                We provide the best home design, construction and maintainance
+                services for you and your family.
+              </p>
+
+              <div class="home_buttons">
+                <a href="#services" class="button">Our Services</a>
+
+                <a href="#projects" class="button_link">
+                  <span>View Projects</span>
+                  <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="home_info">
+              <div>
+                <h3 class="home_info-title">10+</h3>
+                <p class="home_info-description">
+                  Years of <br />
+                  Experience
+                </p>
+              </div>
+
+              <div>
+                <h3 class="home_info-title">200</h3>
+                <p class="home_info-description">
+                  Complete <br />
+                  Projects
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="home_images">
+            <img
+              src="./assets/images/home-img-1.png"
+              alt="img-1"
+              class="home_img-1"
+            />
+
+            <img
+              src="./assets/images/home-img-2.png"
+              alt="img-2"
+              class="home_img-2"
+            />
+          </div>
+        </div>
+      </section>
 
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about"></section>
