complete about section

--- a/construction-web/index.html
+++ b/construction-web/index.html
@@ -136,7 +136,55 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <div class="about_container container grid">
+          <div class="about_data">
+            <span class="section_subtitle">ABOUT US</span>
+            <h2 class="section_title">
+              We Provide The Best <br />
+              Services To Build
+            </h2>
+
+            <p class="about_description">
+              We Strive to provide the best professionals to make your project a
+              construction masterpiece, something unique and unmatched.
+            </p>
+
+            <ul class="about_list grid">
+              <li class="about_list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Professional workers</span>
+              </li>
+              <li class="about_list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Guaranteed quality</span>
+              </li>
+              <li class="about_list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Extensive experience</span>
+              </li>
+              <li class="about_list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>We quote your project</span>
+              </li>
+            </ul>
+
+            <a href="#projects" class="button">View Projects</a>
+          </div>
+          <div class="about_images">
+            <img
+              src="./assets/images/about-img-1.png"
+              alt="about-1"
+              class="about_img-1"
+            />
+            <img
+              src="./assets/images/about-img-2.png"
+              alt="about-2"
+              class="about_img-2"
+            />
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services"></section>
