--- a/construction-web/index.html
+++ b/construction-web/index.html
@@ -18,7 +18,7 @@
     />
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -187,17 +187,341 @@
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section" id="services"></section>
+      <section class="services section" id="services">
+        <div class="services container grid">
+          <div class="services_data">
+            <div>
+              <span class="section_subtitle">OUR SERVICES</span>
+              <h2 class="section_title">
+                High Quality <br />
+                Construction Services
+              </h2>
+            </div>
+
+            <p class="services_description">
+              We provide multiple services for you, offering confidence and
+              security in construction.
+            </p>
+
+            <a href="#contact" class="button">Contact Now</a>
+          </div>
+          <div class="services_swiper swiper">
+            <div class="swiper-wrapper">
+              <article class="services_card swiper-slide">
+                <div class="services_icons">
+                  <i class="ri-building-line"></i>
+                </div>
+                <h3 class="services_title">
+                  Housing <br />
+                  Construction
+                </h3>
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services_card swiper-slide">
+                <div class="services_icons">
+                  <i class="ri-home-office-line"></i>
+                </div>
+                <h3 class="services_title">
+                  Construction of <br />
+                  Home Areas
+                </h3>
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services_card swiper-slide">
+                <div class="services_icons">
+                  <i class="ri-tools-line"></i>
+                </div>
+                <h3 class="services_title">
+                  Maintainance & <br />
+                  Repair
+                </h3>
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services_card swiper-slide">
+                <div class="services_icons">
+                  <i class="ri-box-3-line"></i>
+                </div>
+                <h3 class="services_title">
+                  Installation of <br />
+                  Ceramics & Other
+                </h3>
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services_card swiper-slide">
+                <div class="services_icons">
+                  <i class="ri-drop-line"></i>
+                </div>
+                <h3 class="services_title">
+                  Water & Drainage <br />
+                  Installation
+                </h3>
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+            </div>
+          </div>
+
+          <!-- Navigation Buttons -->
+          <div class="swiper-button-prev">
+            <i class="ri-arrow-left-line"></i>
+          </div>
+          <div class="swiper-button-next">
+            <i class="ri-arrow-right-line"></i>
+          </div>
+        </div>
+
+        <div class="services_shape"></div>
+      </section>
 
       <!--==================== PROJECTS ====================-->
-      <section class="projects section" id="projects"></section>
+      <section class="projects section" id="projects">
+        <span class="section_subtitle"> OUR PROJECTS </span>
+        <h2 class="section_title">
+          Latest Completed <br />
+          Projects
+        </h2>
+
+        <div class="projects_container container grid">
+          <article class="projects_card">
+            <img
+              src="./assets/images/projects-img-1.png"
+              alt="project-1"
+              class="projects_img"
+            />
+
+            <div class="projects_data">
+              <span>House construction</span>
+              <h2 class="projects_title">Two Story House</h2>
+              <span class="projects_date">January 15, 2024</span>
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceiling and others.
+              </p>
+            </div>
+          </article>
+
+          <article class="projects_card">
+            <img
+              src="./assets/images/projects-img-2.png"
+              alt="project-2"
+              class="projects_img"
+            />
+
+            <div class="projects_data">
+              <span>Maintainance & Repair</span>
+              <h2 class="projects_title">Stairs & Columns</h2>
+              <span class="projects_date">May 21, 2024</span>
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceiling and others.
+              </p>
+            </div>
+          </article>
+
+          <article class="projects_card">
+            <img
+              src="./assets/images/projects-img-3.png"
+              alt="project-3"
+              class="projects_img"
+            />
+
+            <div class="projects_data">
+              <span>Construction of Home Areas</span>
+              <h2 class="projects_title">Kitchen Room</h2>
+              <span class="projects_date">July 03, 2024</span>
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceiling and others.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <div class="container">
+          <span class="section_subtitle">CONTACT US</span>
+          <h2 class="section_title">Write To Us & Build</h2>
+
+          <div class="contact_container grid">
+            <img
+              src="./assets/images/contact-img.png"
+              alt="contact"
+              class="contact_img"
+            />
+
+            <div class="contact_data grid">
+              <div class="contact_card">
+                <div class="contact_icon">
+                  <i class="ri-map-pin-2-line"></i>
+                </div>
+
+                <h3 class="contact_title">I'm Here</h3>
+
+                <address class="contact_info">
+                  Sialkot - Pakistan <br />
+                  Abdullah Street #2
+                </address>
+              </div>
+
+              <div class="contact_card">
+                <div class="contact_icon">
+                  <i class="ri-phone-line"></i>
+                </div>
+
+                <h3 class="contact_title">Talk to us</h3>
+
+                <address class="contact_info">
+                  +92-000-000-0000 <br />
+                  +92-111-111-1111
+                </address>
+              </div>
+
+              <div class="contact_card">
+                <div class="contact_icon">
+                  <i class="ri-message-3-line"></i>
+                </div>
+
+                <h3 class="contact_title">Chat with us</h3>
+
+                <div class="contact_social">
+                  <a
+                    href="https://web.whatsapp.com/"
+                    target="_blank"
+                    class="contact_social-link"
+                  >
+                    <i class="ri-whatsapp-line"></i>
+                  </a>
+
+                  <a
+                    href="https://www.messenger.com/"
+                    target="_blank"
+                    class="contact_social-link"
+                  >
+                    <i class="ri-messenger-line"></i>
+                  </a>
+
+                  <a
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    class="contact_social-link"
+                  >
+                    <i class="ri-instagram-line"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer_container container grid">
+        <div>
+          <a href="#" class="footer_logo">
+            <i class="ri-building-3-line"></i>
+            <span>Contruct</span>
+          </a>
+
+          <p class="footer_description">
+            We build security <br />
+            and trust in homes.
+          </p>
+
+          <address class="footer_email">Email: construct456@gmail.com</address>
+        </div>
+
+        <div class="footer_content grid">
+          <div>
+            <h3 class="footer_title">Company</h3>
+
+            <ul class="footer_links">
+              <li>
+                <a href="#about" class="footer_link">About Us</a>
+              </li>
+
+              <li>
+                <a href="#services" class="footer_link">Services</a>
+              </li>
+
+              <li>
+                <a href="#projects" class="footer_link">Projects</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="footer_title">Information</h3>
+
+            <ul class="footer_list">
+              <li>
+                <address class="footer_info">
+                  Sialkot - Pakistan <br />
+                  Abdullah Street #2
+                </address>
+              </li>
+
+              <li>
+                <address class="footer_info">9AM - 11PM</address>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="footer_title">Social Media</h3>
+
+            <div class="footer_social">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="footer_social-link"
+              >
+                <i class="ri-facebook-circle-line"></i>
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer_social-link"
+              >
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a
+                href="https://www.twitter.com/"
+                target="_blank"
+                class="footer_social-link"
+              >
+                <i class="ri-twitter-x-line"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <span class="footer_copy"> &copy; All Rights Reserved By Bloomefy. </span>
+    </footer>
 
     <!--========== SCROLL UP ==========-->
 
@@ -205,7 +529,7 @@
     <script src=""></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="./assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/script.js"></script>
