--- a/interno-tailwind/index.html
+++ b/interno-tailwind/index.html
@@ -21,15 +21,40 @@
     />
   </head>
   <body class="bg-slate-100">
+    <!-- header -->
+    <header class="sticky top-0 h-[90px] shadow-xl z-30">header</header>
     <!-- page wrapper -->
     <main class="max-w-[1920px] mx-auto bg-white overflow-hidden">
-      <h1 class="h1">Interno</h1>
+      <!-- grid img -->
+      <div
+        class="xl:bg-grid xl:bg-center xl:bg-repeat-y fixed top-0 right-0 bottom-0 left-0 z-10"
+      ></div>
       <!-- hero -->
-      <div class="hero"></div>
+      <section
+        class="hero h-[640px] xl:h-[840px] bg-hero bg-center lg:bg-cover bg-no-repeat bg-fixed xl:rounded-bl-[290px] relative z-20"
+      >
+        <div
+          class="container mx-auto h-full flex items-center justify-center xl:justify-start"
+        >
+          <!-- text -->
+          <div
+            class="hero_text w-[567px] flex flex-col items-center text-center xl:text-left lg:items-start"
+          >
+            <h1 class="h1 mb-8">Let Your Home Be Unique</h1>
+            <p class="mb-8">
+              There are many variations of the passages of lorem Ipsum from
+              available,variations of the passages.
+            </p>
+            <button class="btn btn-primary mx-auto xl:mx-0">
+              Get free estimation
+              <i class="ri-arrow-right-line text-accent-default"></i>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- temporary div -->
+      <div class="h-[3000px]"></div>
     </main>
-
-    <!-- temporary div -->
-    <div class="h-[3000px]"></div>
 
     <!-- js -->
     <script src="./assets/js/scrollreveal.min.js"></script>
