--- a/interno-tailwind/index.html
+++ b/interno-tailwind/index.html
@@ -144,7 +144,7 @@
           >
             <!-- text -->
             <div
-              class="flex-1 order-2 xl:order-none max-w-xl xl:max-w-[410px] flex flex-col items-center xl:items-start gap-8"
+              class="about_text flex-1 order-2 xl:order-none max-w-xl xl:max-w-[410px] flex flex-col items-center xl:items-start gap-8"
             >
               <h2 class="h2">We Create The Art Of Stylish Living Stylishly</h2>
               <p>
@@ -338,7 +338,7 @@
       <section class="work mt-[80px] xl:mt-[150px] relative z-20">
         <div class="container mx-auto xl:px-0">
           <!-- text -->
-          <div class="text-center mb-24">
+          <div class="work_text text-center mb-24">
             <h2 class="work_title h2 mb-4">Follow Our Projects</h2>
             <p class="work_subtitle max-w-3xl mx-auto">
               It is a long established fact that a reader will be distracted by
@@ -351,7 +351,7 @@
             class="work_grid grid xl:grid-cols-2 grid-cols-1 gap-x-[104px] gap-y-[56px]"
           >
             <!-- item -->
-            <div class="w-full max-w-[548px] h-full mx-auto">
+            <div class="work_item1 w-full max-w-[548px] h-full mx-auto">
               <img
                 class="mb-6"
                 src="./assets/images/work/01.png"
@@ -374,7 +374,7 @@
             </div>
 
             <!-- item -->
-            <div class="w-full max-w-[548px] h-full mx-auto">
+            <div class="work_item2 w-full max-w-[548px] h-full mx-auto">
               <img
                 class="mb-6"
                 src="./assets/images/work/02.png"
@@ -397,7 +397,7 @@
             </div>
 
             <!-- item -->
-            <div class="w-full max-w-[548px] h-full mx-auto">
+            <div class="work_item1 w-full max-w-[548px] h-full mx-auto">
               <img
                 class="mb-6"
                 src="./assets/images/work/03.png"
@@ -420,7 +420,7 @@
             </div>
 
             <!-- item 4 -->
-            <div class="w-full max-w-[548px] h-full mx-auto">
+            <div class="work_item2 w-full max-w-[548px] h-full mx-auto">
               <img
                 class="mb-6"
                 src="./assets/images/work/04.png"
@@ -489,7 +489,7 @@
       <section class="news mt-[80px] xl:mt-[150px] relative z-20">
         <div class="container mx-auto px-0">
           <!-- text -->
-          <div class="text-center max-w-3xl mx-auto mb-[52px]">
+          <div class="news_text text-center max-w-3xl mx-auto mb-[52px]">
             <h2 class="news_title h2 mb-3">Articles & News</h2>
             <p class="news_subtitle">
               It is a long established fact that a reader will be distracted by
