complete hero category and faq section

--- a/html-css-js-projects/education-web/index.html
+++ b/html-css-js-projects/education-web/index.html
@@ -36,5 +36,347 @@
         </button>
       </div>
     </nav>
+
+    <!-- hero section -->
+    <section class="hero">
+      <div class="container hero_container">
+        <div class="hero_left">
+          <h1>Grow your skills to advance your career path</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+            soluta numquam tempora, exercitationem laudantium deleniti ut
+            eveniet quod beatae unde.
+          </p>
+          <a href="./courses.html" class="btn btn-primary">Get Started</a>
+        </div>
+
+        <div class="hero_right">
+          <img src="./assets/images/header.svg" alt="hero-img" />
+        </div>
+      </div>
+    </section>
+
+    <!-- categories -->
+    <section class="categories">
+      <div class="container categories_container">
+        <div class="categories_left">
+          <h1>Categories</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+            veniam quos, id ex officiis dolore repudiandae ut sit, quaerat
+            voluptatum veritatis aliquid inventore quis. Non, ut corporis?
+            Dicta, dolor dolorum!
+          </p>
+          <a href="#" class="btn">Learn more</a>
+        </div>
+
+        <div class="categories_right">
+          <!-- category 1 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-btc-line"></i>
+            </span>
+            <h4>Blockchain</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+
+          <!-- category 2 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-bubble-chart-line"></i>
+            </span>
+            <h4>Graphic Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+
+          <!-- category 3 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-money-dollar-circle-line"></i>
+            </span>
+            <h4>Fianance</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+
+          <!-- category 4 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-megaphone-line"></i>
+            </span>
+            <h4>Marketing</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+
+          <!-- category 5 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-music-2-line"></i>
+            </span>
+            <h4>Music</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+
+          <!-- category 6 -->
+          <article class="category">
+            <span class="category_icon">
+              <i class="ri-shake-hands-line"></i>
+            </span>
+            <h4>Business</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
+              consequatur.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- courses -->
+    <section class="courses">
+      <h2>Our Popular Courses</h2>
+      <div class="container course_container">
+        <!-- course 1 -->
+        <article class="course">
+          <div class="course_img">
+            <img src="./assets/images/course1.jpg" alt="" />
+          </div>
+
+          <div class="course_info">
+            <h4>Responsive Social Media Website UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+              perferendis rem officia dicta? Dicta, quis molestias.
+            </p>
+            <a href="courses.html" class="btn btn-primary">Learn more</a>
+          </div>
+        </article>
+
+        <!-- course 2 -->
+        <article class="course">
+          <div class="course_img">
+            <img src="./assets/images/course2.jpg" alt="" />
+          </div>
+
+          <div class="course_info">
+            <h4>Responsive SmartHome Website Design</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+              perferendis rem officia dicta? Dicta, quis molestias.
+            </p>
+            <a href="courses.html" class="btn btn-primary">Learn more</a>
+          </div>
+        </article>
+
+        <!-- course 3 -->
+        <article class="course">
+          <div class="course_img">
+            <img src="./assets/images/course3.jpg" alt="" />
+          </div>
+
+          <div class="course_info">
+            <h4>Responsive Admin Dashboard UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+              perferendis rem officia dicta? Dicta, quis molestias.
+            </p>
+            <a href="courses.html" class="btn btn-primary">Learn more</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- FAQs -->
+    <section class="faqs">
+      <h2>Frequently Asked Questions</h2>
+      <div class="container faqs_container">
+        <!-- question 1 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 2 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 3 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 4 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 5 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 6 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 7 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 8 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 9 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+
+        <!-- question 10 -->
+        <article class="faq">
+          <div class="faq_icon">
+            <i class="ri-add-line"></i>
+          </div>
+
+          <div class="question_answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              consequatur consequuntur at sed aut numquam necessitatibus quidem
+              delectus ea? Assumenda sit accusantium tempora modi nulla nihil
+              dolor? Eos, similique ipsum.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- js -->
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
