complete educational website

--- a/html-css-js-projects/education-web/about.html
+++ b/html-css-js-projects/education-web/about.html
@@ -13,6 +13,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css"
     />
+
+    <style>
+      body {
+        background-image: url("./assets/images/bg-texture.png");
+      }
+    </style>
   </head>
   <body>
     <!-- navbar -->
@@ -117,6 +123,20 @@
             <img src="./assets/images/tm2.jpg" alt="team-2" />
             <h3>Mia Jones</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 3 -->
@@ -124,6 +144,20 @@
             <img src="./assets/images/tm3.jpg" alt="team-3" />
             <h3>Dania Ayi</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 4 -->
@@ -131,6 +165,20 @@
             <img src="./assets/images/tm4.jpg" alt="team-4" />
             <h3>John Dumelo</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 5 -->
@@ -138,6 +186,20 @@
             <img src="./assets/images/tm5.jpg" alt="team-5" />
             <h3>Ruth Shockings</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 6 -->
@@ -145,6 +207,20 @@
             <img src="./assets/images/tm6.jpg" alt="team-6" />
             <h3>Edem Quist</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 7 -->
@@ -152,6 +228,20 @@
             <img src="./assets/images/tm7.jpg" alt="team-7" />
             <h3>Lila James</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 8 -->
@@ -159,6 +249,20 @@
             <img src="./assets/images/tm8.jpg" alt="team-8" />
             <h3>Menz Gold</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 9 -->
@@ -166,6 +270,20 @@
             <img src="./assets/images/tm9.jpg" alt="team-9" />
             <h3>Shatta Smith</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
 
           <!-- card 10 -->
@@ -173,6 +291,20 @@
             <img src="./assets/images/tm10.jpg" alt="team-10" />
             <h3>Alize John</h3>
             <p>Expert Tutor</p>
+
+            <div class="team_socials">
+              <a href="https://instagram.com" target="_blank">
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a href="https://twitter.com" target="_blank">
+                <i class="ri-twitter-fill"></i>
+              </a>
+
+              <a href="https://linkedin.com" target="_blank">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </div>
           </article>
         </div>
       </div>
