--- a/html-css-js-projects/education-web/index.html
+++ b/html-css-js-projects/education-web/index.html
@@ -13,6 +13,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css"
     />
+
+    <style>
+      body {
+        background-image: url("./assets/images/bg-texture.png");
+      }
+    </style>
   </head>
   <body>
     <!-- navbar -->
