--- a/html-css-js-tailwind-projects/dashboard-html-css-js/index.html
+++ b/html-css-js-tailwind-projects/dashboard-html-css-js/index.html
@@ -20,7 +20,7 @@
             <h2>Bloo<span class="danger">mefy</span></h2>
           </div>
 
-          <div id="closeBtn" class="close">
+          <div id="close-btn" class="close">
             <i class="ri-close-line"></i>
           </div>
         </div>
@@ -308,31 +308,38 @@
             </div>
           </div>
 
-          <div class="item online">
+          <div class="item offline">
             <div class="icon">
-              <i class="ri-shopping-cart-2-line"></i>
+              <i class="ri-handbag-line"></i>
             </div>
             <div class="right">
               <div class="info">
-                <h3>ONLINE ORDERS</h3>
+                <h3>OFFLINE ORDERS</h3>
                 <small class="text_muted">Last 24 Hours</small>
               </div>
-              <h5 class="success">+39%</h5>
-              <h3>3839</h3>
+              <h5 class="danger">-17%</h5>
+              <h3>1100</h3>
             </div>
           </div>
 
-          <div class="item online">
+          <div class="item customers">
             <div class="icon">
-              <i class="ri-shopping-cart-2-line"></i>
+              <i class="ri-user-line"></i>
             </div>
             <div class="right">
               <div class="info">
-                <h3>ONLINE ORDERS</h3>
+                <h3>NEW CUSTOMERS</h3>
                 <small class="text_muted">Last 24 Hours</small>
               </div>
-              <h5 class="success">+39%</h5>
-              <h3>3839</h3>
+              <h5 class="success">+25%</h5>
+              <h3>849</h3>
+            </div>
+          </div>
+
+          <div class="item add-product">
+            <div>
+              <i class="ri-add-line"></i>
+              <h3>Add Product</h3>
             </div>
           </div>
         </div>
