start middle section

--- a/nokosocial-media/index.html
+++ b/nokosocial-media/index.html
@@ -17,6 +17,7 @@
         <div class="search-bar">
           <i class="ri-search-line"></i>
           <input
+            id="create-post"
             type="search"
             placeholder="Search for creators, inspirations, and project"
           />
@@ -177,7 +178,71 @@
         </div>
 
         <!-- center -->
-        <div class="center"></div>
+        <div class="center">
+          <!-- stories -->
+          <div class="stories">
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-8.jpg" alt="user" />
+              </div>
+
+              <p class="name">Your Story</p>
+            </div>
+
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-9.jpg" alt="user" />
+              </div>
+
+              <p class="name">Lilla James</p>
+            </div>
+
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-10.jpg" alt="user" />
+              </div>
+
+              <p class="name">Danial Bale</p>
+            </div>
+
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-11.jpg" alt="user" />
+              </div>
+
+              <p class="name">Jane Doe</p>
+            </div>
+
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-12.jpg" alt="user" />
+              </div>
+
+              <p class="name">Tina White</p>
+            </div>
+
+            <div class="story">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-13.jpg" alt="user" />
+              </div>
+
+              <p class="name">Wenie Hale</p>
+            </div>
+          </div>
+
+          <form class="create-post">
+            <div class="profile-picture">
+              <img src="./assets/images/profile-1.jpg" alt="feed" />
+            </div>
+            <input
+              type="search"
+              placeholder="What's on your mind, Diana?"
+              id="create-post"
+            />
+
+            <input type="submit" value="submit" class="btn btn-primary" />
+          </form>
+        </div>
 
         <!-- right -->
         <div class="right"></div>
