--- a/nokosocial-media/index.html
+++ b/nokosocial-media/index.html
@@ -162,7 +162,7 @@
               <h3>Analytics</h3>
             </a>
 
-            <a class="menu-item">
+            <a class="menu-item" id="theme">
               <span><i class="ri-moon-clear-line"></i></span>
               <h3>Theme</h3>
             </a>
