--- a/hospital-website/index.html
+++ b/hospital-website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hospital Web Desgin</title>
     <!-- css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <!-- links -->
     <link
@@ -14,7 +14,31 @@
     />
   </head>
   <body>
-    <h1>Al Shifa</h1>
+    <!-- Nav Starts -->
+    <nav>
+      <div class="container">
+        <a href="#" class="logo">
+          <h3>SurgiSilks</h3>
+        </a>
+
+        <ul id="nav_items">
+          <li><a href="#">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#specialist">Specialists</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#appointments" class="btn">Make Appointment</a></li>
+        </ul>
+
+        <button id="openNav">
+          <i class="ri-menu-4-line"></i>
+        </button>
+        <button id="closeNav">
+          <i class="ri-close-line"></i>
+        </button>
+      </div>
+    </nav>
+
+    <!-- Nav ends -->
 
     <script src="./script.js"></script>
   </body>
