complete hero section

--- a/hospital-website/index.html
+++ b/hospital-website/index.html
@@ -40,6 +40,25 @@
 
     <!-- Nav ends -->
 
+    <!-- Hero Section -->
+    <header>
+      <div class="container">
+        <div class="head_content">
+          <h1>Complete Health Care Solutions For Everyone</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            culpa sit veritatis in voluptate quia suscipit, sunt corrupti
+            commodi ipsa est provident, Maiores.
+          </p>
+          <a href="#appointments" class="btn">Make Appointment</a>
+        </div>
+
+        <div class="head_image">
+          <img src="./assets/images/header.svg" alt="header" />
+        </div>
+      </div>
+    </header>
+
     <script src="./script.js"></script>
   </body>
 </html>
